--- a/app/src/main/res/layout/layout_source_line.xml
+++ b/app/src/main/res/layout/layout_source_line.xml
@@ -1,49 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-    <TableRow
-        android:weightSum="1"
+    android:layout_height="fill_parent"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/commentImage"
+        android:layout_width="30dp"
+        android:layout_height="@dimen/common_medium_line_height" />
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="fill_parent"
+        android:background="@android:color/darker_gray" />
+
+    <TextView
+        android:id="@+id/lineNumberText"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_width="fill_parent">
+        android:textColor="@android:color/darker_gray"
+        android:textSize="@dimen/common_medium_font_size" />
 
-        <ImageView
-            android:id="@+id/commentImage"
-            android:layout_width="30dp"
-            android:layout_height="@dimen/common_medium_line_height"/>
-        <View
-            android:layout_width="1dp"
-            android:layout_height="fill_parent"
-            android:background="@android:color/darker_gray"
-            />
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="0.99"
-            android:layout_height="wrap_content"
-            android:weightSum="1">
+    <View
+        android:layout_width="1dp"
+        android:layout_height="fill_parent"
+        android:background="@android:color/darker_gray" />
 
-            <TextView
-                android:id="@+id/lineNumberText"
-                android:layout_width="20dp"
-                android:layout_weight="0.05"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/common_medium_font_size"
-                android:textColor="@android:color/darker_gray"
-                />
+    <TextView
+        android:id="@+id/codeText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="@dimen/common_medium_font_size" />
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="fill_parent"
-                android:background="@android:color/darker_gray"
-                />
-
-            <TextView
-                android:id="@+id/codeText"
-                android:layout_width="0dp"
-                android:layout_weight="0.95"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/common_medium_font_size" />
-        </LinearLayout>
-
-    </TableRow>
-</TableLayout>
+</LinearLayout>
