Issue #27: Now source code lines is hidden by default,and show/hide by button on action bar

--- a/app/src/main/res/menu/source_explorer.xml
+++ b/app/src/main/res/menu/source_explorer.xml
@@ -24,5 +24,10 @@
         android:showAsAction="always"
         android:title="@string/pl.agh.edu.mobilecodereviewer.SourceExplorer.gotoNextChange" />
 
+    <item android:id="@+id/showHideLinesNumber"
+        android:icon="@android:drawable/ic_menu_mylocation"
+        android:showAsAction="always"
+        android:title="@string/pl.agh.edu.mobilecodereviewer.SourceExplorer.gotoNextChange" />
+
 
 </menu>
