--- a/app/src/main/res/layout/layout_changes_explorer_group.xml
+++ b/app/src/main/res/layout/layout_changes_explorer_group.xml
@@ -2,7 +2,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft">
 
 
@@ -11,9 +11,11 @@
         android:layout_height="@dimen/common_big_line_height"
         android:id="@+id/changesExplorerGroupLabel"
         android:text="New text"
+        android:textAlignment="textStart"
         android:textSize="@dimen/common_medium_font_size"
         android:gravity="center_vertical"
         android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_toLeftOf="@+id/changesExplorerGroupGoButton"
         />
