--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,13 @@
         <item name="android:paddingBottom">@dimen/activity_vertical_margin</item>
     </style>
 
+    <style name="common_small_margins">
+        <item name="android:paddingLeft">@dimen/common_small_maring</item>
+        <item name="android:paddingRight">@dimen/common_small_maring</item>
+        <item name="android:paddingTop">@dimen/common_small_maring</item>
+        <item name="android:paddingBottom">@dimen/common_small_maring</item>
+    </style>
+
     <style name="common_list_item_label">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
