Some refactoring of code displaying source code syntax

--- a/app/src/main/res/layout/layout_source_diff_line.xml
+++ b/app/src/main/res/layout/layout_source_diff_line.xml
@@ -39,6 +39,7 @@
             android:minHeight="@dimen/common_medium_line_height"
             android:layout_height="wrap_content"
             android:textSize="@dimen/common_medium_font_size"
+            android:typeface="monospace"
             />
 
 </LinearLayout>
