--- a/app/src/main/res/layout/layout_source_line.xml
+++ b/app/src/main/res/layout/layout_source_line.xml
@@ -31,6 +31,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="@dimen/common_medium_font_size" />
+        android:textSize="@dimen/common_medium_font_size"
+        android:typeface="monospace"/>
 
 </LinearLayout>
