--- a/app/src/main/res/layout/activity_change_info_tab.xml
+++ b/app/src/main/res/layout/activity_change_info_tab.xml
@@ -20,6 +20,16 @@
 
                 <TextView
                     style="@style/common_list_item_label"
+                    android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeInfoTab.number" />
+
+                <TextView
+                    style="@style/common_list_item_value"
+                    android:id="@+id/changeInfoTabChangeNumber" />
+
+                <View style="@style/common_horizontal_separator" />
+
+                <TextView
+                    style="@style/common_list_item_label"
                     android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeInfoTab.changeId" />
 
                 <TextView
