--- a/app/src/main/res/layout/layout_source_line.xml
+++ b/app/src/main/res/layout/layout_source_line.xml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/sourceLineMainLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/commentImage"
-        android:layout_width="30dp"
-        android:layout_height="@dimen/common_medium_line_height" />
-
-    <View
-        android:layout_width="1dp"
-        android:layout_height="fill_parent"
-        android:background="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/lineNumberText"
@@ -31,6 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="@dimen/common_medium_font_size" />
+        android:textSize="@dimen/common_medium_font_size"
+        android:minHeight="@dimen/common_medium_line_height"/>
 
 </LinearLayout>
