Issue #33: improvement of adding comments to files Issue #46: hiddin about button if not enough place

--- a/app/src/main/res/layout/layout_add_review.xml
+++ b/app/src/main/res/layout/layout_add_review.xml
@@ -36,4 +36,18 @@
         android:layout_height="wrap_content"
         android:id="@+id/votesList" />
 
+    <TextView
+        android:paddingTop="20px"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Patch comments"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <View style="@style/common_horizontal_separator" />
+
+    <ExpandableListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/addReviewFilesList" />
+
 </LinearLayout>
