--- a/app/src/main/res/menu/changes_explorer.xml
+++ b/app/src/main/res/menu/changes_explorer.xml
@@ -25,16 +25,15 @@
         android:icon="@android:drawable/ic_popup_sync"
         android:showAsAction="always" />
 
-
     <item android:id="@+id/action_about"
         android:title="@string/pl.agh.edu.mobilecodereviewer.about"
         android:icon="@drawable/common_help_icon"
-        android:orderInCategory="100"
-        android:showAsAction="always" />
+        android:orderInCategory="10"
+        android:showAsAction="ifRoom" />
 
     <item android:id="@+id/changeConfiguration"
         android:title="@string/pl.agh.edu.mobilecodereviewer.ChangesExplorer.changeConfiguration"
-        android:orderInCategory="105"
+        android:orderInCategory="11"
         android:showAsAction="never"
         />
 </menu>
