changed approach of adding new comments by using rest api

--- a/app/src/main/res/layout/activity_commit_message_tab.xml
+++ b/app/src/main/res/layout/activity_commit_message_tab.xml
@@ -14,7 +14,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="VALUE"
         android:id="@+id/commitMessageTabValue"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
