--- a/app/src/main/res/layout/activity_configuration.xml
+++ b/app/src/main/res/layout/activity_configuration.xml
@@ -8,7 +8,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         style="@style/common_activity_margins"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:context="pl.edu.agh.mobilecodereviewer.view.activities.Configuration">
 
