--- a/app/src/main/res/layout/layout_add_review.xml
+++ b/app/src/main/res/layout/layout_add_review.xml
@@ -23,7 +23,7 @@
     </EditText>
 
     <TextView
-        android:paddingTop="20px"
+        android:paddingTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pl.agh.edu.mobilecodereviewer.ChangeDetails.menu.addReview.votes"
@@ -37,7 +37,7 @@
         android:id="@+id/votesList" />
 
     <TextView
-        android:paddingTop="20px"
+        android:paddingTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Patch comments"
