--- a/app/src/main/res/layout/layout_single_line_pending_comment.xml
+++ b/app/src/main/res/layout/layout_single_line_pending_comment.xml
@@ -60,7 +60,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edit"
+        android:text="@string/pl.agh.edu.common.edit"
         android:id="@+id/editFileCommentButton"
         android:layout_below="@+id/fileCommentComment"
         android:layout_alignParentRight="true"
@@ -70,7 +70,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cancel"
+        android:text="@string/pl.agh.edu.common.cancel"
         android:id="@+id/cancelFileCommentButton"
         android:layout_below="@+id/editFileComment"
         android:layout_alignParentRight="true"
@@ -80,7 +80,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Discard"
+        android:text="@string/pl.agh.edu.common.discard"
         android:id="@+id/discardFileCommentButton"
         android:layout_below="@+id/editFileComment"
         android:layout_toLeftOf="@+id/cancelFileCommentButton"
@@ -91,7 +91,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save"
+        android:text="@string/pl.agh.edu.common.save"
         android:id="@+id/saveFileCommentButton"
         android:layout_below="@+id/editFileComment"
         android:layout_toLeftOf="@+id/discardFileCommentButton"
