Issue #18: Submitting change feature

--- a/app/src/main/res/menu/change_details.xml
+++ b/app/src/main/res/menu/change_details.xml
@@ -5,7 +5,7 @@
     <item android:id="@+id/refreshChangeDetails"
         android:title="@string/pl.agh.edu.mobilecodereviewer.ChangesExplorer.refreshChangeDetails"
         android:icon="@android:drawable/ic_popup_sync"
-        android:showAsAction="always" />
+        android:showAsAction="ifRoom" />
 
     <group
         android:id="@+id/changeDetailsPrivilegedGroup">
@@ -14,8 +14,13 @@
             android:title="@string/pl.agh.edu.mobilecodereviewer.ChangeDetails.menu.addReview"
             android:icon="@drawable/change_details_add_review_icon"
             android:orderInCategory="0"
-            android:showAsAction="always" />
+            android:showAsAction="ifRoom" />
 
+        <item android:id="@+id/action_submitChange"
+            android:title="@string/pl.agh.edu.mobilecodereviewer.ChangeDetails.menu.submit"
+            android:icon="@drawable/common_accept_icon_white"
+            android:orderInCategory="1"
+            android:showAsAction="ifRoom" />
     </group>
 
 </menu>
