--- a/app/src/main/res/layout/layout_source_diff_line.xml
+++ b/app/src/main/res/layout/layout_source_diff_line.xml
@@ -8,7 +8,7 @@
             android:id="@+id/lineNumberBeforeChangeText"
             android:layout_height="@dimen/common_medium_line_height"
             android:layout_width="50dp"
-            android:textSize="@dimen/common_medium_font_size"
+            android:textSize="@dimen/pl.agh.edu.mobilecodereviewer.source_code_font_size"
             android:textColor="@android:color/darker_gray"
             />
 
@@ -22,7 +22,7 @@
             android:id="@+id/lineNumberAfterChangeText"
             android:layout_height="@dimen/common_medium_line_height"
             android:layout_width="50dp"
-            android:textSize="@dimen/common_medium_font_size"
+            android:textSize="@dimen/pl.agh.edu.mobilecodereviewer.source_code_font_size"
             android:textColor="@android:color/darker_gray"
             />
 
@@ -38,7 +38,7 @@
             android:layout_weight="1"
             android:minHeight="@dimen/common_medium_line_height"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/common_medium_font_size"
+            android:textSize="@dimen/pl.agh.edu.mobilecodereviewer.source_code_font_size"
             android:typeface="monospace"
             />
 
