--- a/app/src/main/res/layout/layout_source_line.xml
+++ b/app/src/main/res/layout/layout_source_line.xml
@@ -10,7 +10,7 @@
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:textColor="@android:color/darker_gray"
-        android:textSize="@dimen/common_medium_font_size" />
+        android:textSize="@dimen/pl.agh.edu.mobilecodereviewer.source_code_font_size" />
 
     <View
         android:layout_width="1dp"
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="@dimen/common_medium_font_size"
+        android:textSize="@dimen/pl.agh.edu.mobilecodereviewer.source_code_font_size"
         android:typeface="monospace"
         android:minHeight="@dimen/common_medium_line_height"/>
 
