--- a/app/src/main/res/layout/layout_line_comments.xml
+++ b/app/src/main/res/layout/layout_line_comments.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lineCommentsList"
+        android:layout_alignParentRight="true"
+        android:id="@+id/replyCommentButton"
+        android:text="Reply"/>
+
+    <View style="@style/common_horizontal_separator"
+          android:layout_above="@+id/replyCommentButton"/>
 
     <ListView
         android:id="@+id/lineCommentsList"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#ff000000"
+        android:layout_alignParentTop="true"
         />
 
-</LinearLayout>
+</RelativeLayout>
